2011-07-29    <simleo@neuron.crs4.it>

	* bl/core/utils/longest_subs.py: added.

	* bl/core/seq/io/dbsnp.py: added.

2011-07-25    <simleo@neuron.crs4.it>

	* bl/core/utils/pspawner.py (ProcessSpawner.run): added an
	external handler for ChildTerminationError: for reasons we
	currently don't understand, it sometimes manages to escape the
	internal one.

2011-07-06    <simleo@neuron.crs4.it>

	* bl/core/utils/guardian.py (main): changed to exit not only when
	the master is dead, but also when the slave is.